# PostmanAlternative

./: .gitignore  ACCESSIBILITY_VERIFICATION.md  ARCHITECTURE_IMPROVEMENTS_PLAN.md  INTERFACE_COMPLETION_PLAN.md  PORTABLE_TEST_PLAN.md  PRODUCT_PLAN.md  README.md  RELEASE_NOTES.md  WORKSPACE_FORMAT.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
packaging/: PORTABLE-README.txt  Start-Windows.cmd  Start-macOS.command
scripts/: create-portable-layout.sh
src/: App.css  App.tsx  interface.test.mjs  interface.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  runner.rs  vault.rs  workspace.rs
src-tauri/src/commands/: workspace.rs
src-tauri/src/workspace/: logging.rs  mod.rs  models.rs  portable_export.rs
src/components/: KeyValueTable.tsx  responseFormat.tsx
src/domain/: types.ts
src/lib/: assertions.ts  reports.ts  requests.ts
src/services/: sandbox.ts  tauri.ts
