[package]
name = "api-lantern"
version = "0.1.0"
description = "A free, local-first API client"
authors = ["API Lantern contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "api_lantern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "multipart", "rustls"] }
tokio = { version = "1", features = ["fs", "macros", "sync"] }
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
